# gitsplain

./: .gitignore  README.md  app.py  pyproject.toml
src/: workflow_manager.py
src/gitsplain/: app.py  diagram.py  utils.py  workflow.py  workflow_manager.py
src/gitsplain/prompts/: analysis.py  diagram.py  mapping.py
src/gitsplain/services/: ast.py  ast_parser.py  github.py  llm.py  renderer.py
src/prompts/: analysis.py
src/services/github/: client.py  service.py
tests/: test_ast_parser.py  test_diagram.py  test_github.py  test_utils.py
