[project]
name = "gitsplain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "litellm>=1.80.10",
    "loguru>=0.7.3",
    "openai>=1.0.0",
    "pydantic>=2.12.5",
    "pygithub>=2.5.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "tree-sitter-language-pack>=0.13.0",
    "tree-sitter-languages>=1.10.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitsplain"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Core type errors
unresolved-reference = "error"
invalid-assignment = "error"
invalid-argument-type = "error"
invalid-return-type = "error"
missing-argument = "error"
unresolved-import = "error"
unresolved-attribute = "error"
call-non-callable = "error"
# Warnings for potential issues
possibly-unresolved-reference = "warn"
